--- a/src/Components/Content/RoutePoints/RoutePoints.module.css
+++ b/src/Components/Content/RoutePoints/RoutePoints.module.css
@@ -1,11 +1,66 @@
 .routeItem{
-    width: 300px;
-    border: 1px solid black;
-    border-radius: 5px;
-    background-color: antiquewhite;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    width: 100%;
+    border: 1px solid rgba(0, 0, 0, 0.479);
+    border-radius: 8px;
+    background-color: white;
     padding: 5px;
     margin-bottom: 10px;
+    transition: 0.3s;
 }
 .routeItem:hover{
-    background-color: rgb(233, 144, 27);
+    box-shadow: 0 0 5px rgba(0,0,0,0.5);
 }
+
+.routeItem__handle{
+    position: absolute;
+    top: 14px;
+    left: 5px;
+    width: 20px;
+    height: 20px;
+    opacity: 0.5;
+}
+.routeItem__name, .routeItem__address{
+    margin: 0;
+}
+.routeItem__text{
+    margin-left: 30px;
+}
+.routeItem__name{
+    color: black;
+    font-size: 16px;
+    margin-bottom: 3px;
+}
+.routeItem__address{
+    color: rgb(134, 134, 134);
+    font-size: 12px;
+    margin-bottom: 3px;
+}
+
+.routeItem__delete{
+    width: 20px;
+    height: 20px;
+    opacity: 0.3;
+  }
+  .routeItem__delete:hover {
+    opacity: 1;
+  }
+  .routeItem__delete:active:before, .routeItem__delete:active:after {
+    background-color: rgb(131, 0, 0);
+  }
+  .routeItem__delete:before, .routeItem__delete:after {
+    position: absolute;
+    right: 15px;
+    content: ' ';
+    height: 20px;
+    width: 2px;
+    background-color: rgb(51, 51, 51);
+  }
+  .routeItem__delete:before {
+    transform: rotate(45deg);
+  }
+  .routeItem__delete:after {
+    transform: rotate(-45deg);
+  }
