--- a/src/Components/Content/RoutePoints/RoutePoints.module.css
+++ b/src/Components/Content/RoutePoints/RoutePoints.module.css
@@ -3,15 +3,14 @@
     justify-content: space-between;
     position: relative;
     width: 100%;
-    border: 1px solid rgba(0, 0, 0, 0.479);
+    border: 1px solid rgba(0, 0, 0, 0.3);
     border-radius: 8px;
     background-color: white;
     padding: 5px;
-    margin-bottom: 10px;
-    transition: 0.3s;
+    margin-bottom: 5px;
 }
 .routeItem:hover{
-    box-shadow: 0 0 5px rgba(0,0,0,0.5);
+    box-shadow: 0 0 5px rgba(0,0,0,0.2);
 }
 
 .routeItem__handle{
@@ -26,6 +25,7 @@
     margin: 0;
 }
 .routeItem__text{
+    font-family: 'DejaVu Sans Mono';
     margin-left: 30px;
 }
 .routeItem__name{
@@ -48,7 +48,9 @@
     opacity: 1;
   }
   .routeItem__delete:active:before, .routeItem__delete:active:after {
-    background-color: rgb(131, 0, 0);
+    background-color: #050;
+    opacity: 0.7;
+    /* rgb(131, 0, 0); */
   }
   .routeItem__delete:before, .routeItem__delete:after {
     position: absolute;
