--- a/src/Components/Content/RoutePoints/NewPointForm/newPointForm.module.css
+++ b/src/Components/Content/RoutePoints/NewPointForm/newPointForm.module.css
@@ -1,12 +1,14 @@
 .newPointForm{
     width: 100%;
-    margin-bottom: 10px;
+    padding-bottom: 23px;
+    position: relative;
 }
 .newPointForm__input{
     width: 100%;
     height: 50px;
     border-radius: 10px;
-    padding-left: 20px;
+    padding-left: 18px;
+    padding-right: 18px;
     border: none;
     outline: none;
     background-color: rgb(216, 216, 216);
@@ -15,10 +17,9 @@
     border: 1px solid rgb(197, 0, 0);
 }
 .newPointForm__errorText{
+    font-size: 12px;
     color: rgb(197, 0, 0);
-}
-.newPointForm__inputLabel{
-    padding-left: 7px;
-    font-family: 'DejaVu Sans Mono';
-    font-size: 16px;
+    position: absolute;
+    bottom: 5px;
+    left: 5px;
 }
